# gtm-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  release-please-config.json
.beads/: metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
docs/: AI-USAGE.md  BUG-variable-code-line-wrapping.md  BUG-variable-get-invalid-json.md  PRD.md
src/gtm_cli/: __init__.py  __main__.py
src/gtm_cli/cli/: __init__.py  accounts.py  auth.py  containers.py  helpers.py  init.py  main.py  profile.py  setup.py  tags.py  triggers.py  variables.py  versions.py  workspaces.py
src/gtm_cli/core/: __init__.py  auth.py  client.py  config.py
src/gtm_cli/models/: __init__.py
src/gtm_cli/services/: __init__.py
src/gtm_cli/utils/: __init__.py  errors.py  output.py
src/gtm_orchestrator/: __init__.py  __main__.py
src/gtm_orchestrator/cli/: __init__.py  accounts.py  auth.py  containers.py  main.py  profile.py  setup.py  tags.py  triggers.py  variables.py  versions.py  workspaces.py
src/gtm_orchestrator/core/: __init__.py  auth.py  client.py  config.py
src/gtm_orchestrator/utils/: errors.py  output.py
tests/: __init__.py  conftest.py
tests/unit/: test_cli.py  test_output.py  test_tag_commands.py  test_tag_helpers.py  test_trigger_commands.py  test_trigger_update.py  test_variable_commands.py  test_version_commands.py  test_workspace_commands.py  test_workspace_context.py
